# funqdb

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE header.txt  README.md  SPEC.md  TODO.md  pyproject.toml
.claude/: CLAUDE.md  WORKFLOW.md
.claude/agents/: code-reviewer.md  plan-challenger.md  researcher.md  reviewer-correctness.md  reviewer-performance.md  reviewer-readability.md  reviewer-security.md  test-writer.md
.claude/commands/: develop.md  finish-mr.md  fix-bug.md  plan.md
benchmarks/job/queries/: SQL vs FQL.md
ci/: check-coverage.sh  check_coverage.py
docs/: Talks.md  tutorial.md
docs/features/001-cogroup-grouping-keys/: ALTERNATIVES.md  PLAN.md
docs/podcast/: podcast_script.md
docs/tutorial/: 00 Getting Started.md  README.md
docs/tutorial/01 FDM Basics/: Accessing Data.md  Attribute Functions.md  Composite Keys.md  Computed Attribute Functions.md  Computed Attribute Values.md  Computed Attributes.md  Computed Relations.md  Constraints.md  Frozen Attribute Functions.md  Observers.md  README.md  Rename.md  Schemas.md  Visualization.md
docs/tutorial/02 FDM Store/: README.md
docs/tutorial/02 FQL/: README.md  aggregate.md  constraints.md  disaggregate.md  flatten.md
docs/tutorial/03 FDM Store/: README.md  Store.md
docs/tutorial/03 FQL/: README.md  filter.md  join.md  plan.md  set_operations.md  subdatabase.md  union.md
docs/tutorial/05 FQL Basics/: README.md
docs/tutorial/06 Operators/: README v2.md  rank.md  (+12 more)
examples/: schema_example.py
fdm/: API.py  attribute_functions.py  functions.py  python.py  schema.py  sqlitedict.py  util.py  viz.py
fql/: APIs.py  aggregates.py  functions.py  operators.py  util.py
fql/operators/: APIs.py  aggregates.py  constraints.py  filters.py  flatten.py  joins.py  partition.py  partition_and_aggregate.py  projections.py  rank.py  semijoins.py  set_operations.py  subdatabases.py  subsets.py  transforms.py
fql/plan/: __init__.py  extract.py  ir.py  join_graph.py
fql/predicates/: __init__.py  constraints.py  misc.py  predicates.py
lib/: core.py  functions.py  operators.py
scripts/: funqdb-viz
store/: store.py
tests/: first_test.py  lib.py  test_functions.py  test_lib.py  test_operators.py  test_util.py
tests/fdm/: test_attribute_functions.py  test_functions.py  test_python.py  test_schema.py  test_viz.py
tests/fql/: test_aggregates.py  test_util.py
tests/store/: test_store.py
(+31 files in other folders)
