[project]
name = "funqdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Jens Dittrich",email = "jens.dittrich@bigdata.uni-saarland.de"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
pytest = ">=9.0.2, <10.0.0"
black = ">=26.1.0, <27.0.0"
sqlitedict = ">=2.1.0, <3.0.0"
sphinx = "=9.1.0, <10.0.0"
coverage = { extras = ["toml"], version = "7.10.6" }
faker = "^40.8.0"
toolz = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
