[project]
name = "funqdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Jens Dittrich",email = "jens.dittrich@bigdata.uni-saarland.de"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
pytest = ">=9.0.2, <10.0.0"
black = ">=26.1.0, <27.0.0"
sqlitedict = ">=2.1.0, <3.0.0"
sphinx = "=9.1.0, <10.0.0"
coverage = { extras = ["toml"], version = "7.10.6" }
faker = "^40.8.0"
toolz = "^1.1.0"

[tool.pytest.ini_options]
markers = [
    "needs_review_new: AI-generated test — entire method must be reviewed by a human before merge",
    "needs_review_modified: AI-modified test — check '# -- begin/end AI-modified --' sections before merge",
]

[tool.coverage.run]
# Write **relative** file paths into coverage reports (Cobertura XML,
# JSON, HTML). Without this, `coverage xml` emits absolute filesystem
# paths like `/builds/bigdata/funqdb/funqdb/fql/operators/joins.py`,
# which GitLab cannot match against the MR-diff paths (those are
# repo-relative). Result: no per-line coverage annotations in the MR
# "Changes" tab. With `relative_files = true` the XML carries plain
# `fql/operators/joins.py` and GitLab renders the diff correctly.
relative_files = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
